# billo-beeware

./: README.md
.windsurf/rules/: ads-promos.md  authentication-rules.md  billo-llm-rulebook.md  business-logic.md  environment-setup.md  mobile-structure.md  supabase-tables-policies-functions.md
backend/: .env  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  jwt.py
backend/app/endpoints/: auth.py  restaurant.py  tabs.py  waiter.py
backend/app/models/: schemas.py
backend/app/services/: auth_service.py
mobile/: .env  README.md  android-requirements.txt  custom_build.py  pyproject.toml  requirements.in  requirements.txt  run_wsa.sh  setup.py  test_app.py  test_supabase.py
mobile/billo/: CHANGELOG  LICENSE  README.rst  pyproject.toml
mobile/billo/src/billo/: __main__.py  app.py
mobile/src/billo/: app.py
mobile/src/billo.dist-info/: METADATA  top_level.txt
mobile/src/billo/config/: supabase.py
mobile/src/billo/screens/auth/: signup.py
mobile/src/billo/screens/customer/: restaurant.py
mobile/src/billo/screens/home/: __init__.py  home.py
mobile/src/billo/screens/onboarding/: terms.py  welcome.py
mobile/src/billo/screens/restaurant/: __init__.py  dashboard.py
mobile/src/billo/screens/waiter/: dashboard.py
mobile/src/billo/services/: __init__.py  api.py  auth.py  websocket.py
mobile/src/billo/utils/: qr_code.py
pwa/: .env  .env.example  README.md  app.py  generate_icons.py  pyproject.toml
pwa/app/: auth.py  auth_handlers.py  main.py
pwa/app/config/: business_hours.py  settings.py
pwa/app/crud/: tabs.py
pwa/app/database/: base.py  models.py
pwa/app/models/: tables.py
pwa/app/routers/: business_hours.py  dashboard.py  tabs.py
pwa/app/services/: __init__.py  api_client.py  auth.py  config.py
pwa/app/utils/: __init__.py
pwa/static/: manifest.json  service-worker.js
pwa/static/css/: style.css
pwa/static/js/: api-interceptor.js  app.js  auth-flow.js  auth-service.js  business-hours.js  error-boundary.js  menu.js  service-context.js  supabase.js
pwa/templates/: base.html  base_auth.html  dashboard.html  dashboard_new.html  dashboard_simple.html  index.html  login.html  login_simple.html  menu.html  orders.html  react_app.html  settings.html  waiter_dashboard.html  waiters_home.html  welcome.html
shared/: README.md
shared/config/: settings.py
shared/models/: base.py  commerce.py
shared/services/: auth_service.py  order_service.py  payment_service.py  tab_service.py
shared/utils/: api_client.py
