[tool.poetry]
name = "billo-backend"
version = "0.1.0"
description = "Billo Backend API"
authors = ["Henry Miheso <henry@conversationapps.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
supabase = "^2.18.1"
python-jose = "^3.5.0"
passlib = "^1.7.4"
bcrypt = "^4.3.0"
python-multipart = "^0.0.20"
pydantic = "^2.11.7"
requests = "^2.32.5"
emails = "^0.6"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

