[project]
name = "billo"
version = "0.1.0"
description = "Personal Tab Manager"
authors = [
    {name = "Mihi"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "briefcase (>=0.3.25,<0.4.0)",
    "toga (>=0.5.2,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
