[tool.poetry]
name = "billo"
version = "0.1.0"
description = "Customer Tab Management System"
authors = ["Mihi"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "billo", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
toml = "^0.10.2"  # Add this line

# Development/runtime deps not tied to Android packaging
briefcase = {version = ">=0.3.25,<0.4.0", extras = ["android"]}
supabase = "^2.18.1"
gotrue = "2.4.2"

[tool.poetry.group.dev.dependencies]
briefcase = {extras = ["android"], version = "^0.3.25"}

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# -------------------------------------------------------------------
# Briefcase configuration
# -------------------------------------------------------------------
[tool.briefcase]
project_name = "Billo"
bundle = "com.billo"
version = "0.1.0"
author = "Mihi"
author_email = "conversationapps@gmail.com"
description = "Customer Tab Management System"
license = {text = "MIT"}

[tool.briefcase.app.billo]
formal_name = "Billo"
description = "Customer Tab Management System"
sources = ["src/billo"]
package = "billo"
icon = "../shared/assets/images/logo.png"

requires = [
    # Toga / BeeWare
    "toga-core==0.4.7",
    "toga-android==0.4.7",
    "rubicon-java==0.2.6",
    "travertino==0.3.0",
    "colosseum==0.2.0",

    # Your app deps
    "segno==1.6.6",
    "httpx==0.23.3",
    "pydantic==1.10.15",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.5",
    "requests==2.31.0",

    # Supabase client + pinned subdeps
    "supabase==2.4.0",
    "gotrue==2.4.2",
    "postgrest==0.16.0",
    "realtime>=1.0.3,<2.0.0",
    "storage3==0.5.3",
    "supafunc==0.3.3",
]

# Chaquopy-specific Python configuration
[tool.briefcase.app.billo.android.python]
# Environment variables for Supabase
SUPABASE_URL = "https://fqjvwnbrhfctknlrpyba.supabase.co"
SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZxanZ3bmJyaGZjdGtubHJweWJhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTYyMTYzMzgsImV4cCI6MjA3MTc5MjMzOH0.MEJwtBrmzGpv0JobWoA2W0RaunyiQ50gYmkP8oSaC1g"

[tool.briefcase.app.billo.android]
permissions = [
    "INTERNET",
    "ACCESS_NETWORK_STATE",
    "CAMERA",
    "ACCESS_FINE_LOCATION",
    "ACCESS_COARSE_LOCATION"
]

# Optional: define Gradle deps explicitly to silence the warning
build_gradle_dependencies = [
    "androidx.appcompat:appcompat:1.0.2",
    "androidx.constraintlayout:constraintlayout:1.1.3",
    "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
]